fixed firefox overflow bug

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -13,9 +13,10 @@
 
 .slider {
   padding: 100px;
-  width: 100%;
+  width: 95vw;
   text-align: center;
   overflow: hidden;
+  scrollbar-color: rgba(0, 0, 0, 0);
 }
 
 @media screen and (max-width: 768px), screen and (max-height: 500px) {
